--- a/manage/pmp/7-成本管理.md
+++ b/manage/pmp/7-成本管理.md
@@ -1256,3 +1256,349 @@ B. 使用德尔菲技术，专门识别与成本有关的风险
 C. 在监控流程中使用成本管理计划
 D. 定期计算进度偏差
 答案：C
+
+# PMP 第7章  项目成本管理  试题 及解析_爱随风来_新浪博客 
+    http://blog.sina.com.cn/s/blog_75cd9f870100vk1b.html
+
+1.以下哪项不是估算成本过程的工具?(    )
+  A.储备分析             B.PERT估算             C.卖方投标分析          D.成本汇总
+2.项目拟用的挣值管理规则应该在以下哪个文件中作出规定?(    )
+  A.项目成本管理计划     B.项目进度管理计划      C.项目范围管理计划      D.项目变更管理计划
+3.控制成本过程的输出包括(    )。
+  A.成本概算    B.成本预算    C.成本基准    D.成本预测
+4.制定预算过程的主要输入包括(    )。
+  A.范围基准、风险登记册、人力资源计划和组织过程资产
+  B.活动成本估算、范围基准、项目进度计划和资源日历
+  C.活动成本估算、风险登记册、项目进度计划和合同
+  D.成本基准、范围基准、项目进度计划和项目经理意见
+5.下列哪项不是估算成本过程的输入?(    )
+  A.工作分解结构、项目进度计划    B.人力资源计划、工作分解结构词典
+  C.质量成本、项目进度计划        D.风险登记册、项目进度计划
+6.以下哪种预测项目完工情况的方法最为准确?(    )
+  A.自下而上的ETC估算            B.按预算单价的ETC估算
+  C.按累计CPI进行的ETC估算      D.按关键比率的ETC估算
+7.项目成本核算应该在什么时候进行?(    )
+  A.成本发生时    B.实际支付时   C.实际交货时  D.在上述各时间均可，取决于组织的具体需要
+8.项目绩效报告中包括如下数字：PV=110，EV=100，AC=120，总预算为150。成本偏差是多少?(    )
+  A.-20    B.-10    C.+10    D.+20
+9.项目经理通常有权决定项目预算中的各种类型的开支，除了(    )。
+  A.直接成本    B.固定成本    C.应急储备    D.管理储备
+10.什么情形下应该使用EAC为基础来计算完工尚需绩效指数(TCPI)?(    )
+  A.管理层认为BAC已明显不可行    B.项目成本超支比较严重
+  C.项目进度落后比较严重          D.项目必须在规定的时间完工
+11.下列哪项是参数估算的例子?(    )
+  A.回归分析    B.学习曲线    C.自下而上     D.关键路径法
+12.以下哪项是执行组织可以使用的完工估算预测技术?(    )
+  A.EAC=AC+(BAC－EV)/累计CPI    B.EAC=AC+BAC－EV    C.EAC=BAC/累计CPI    D.以上都是
+13.挣值管理整合了以下哪些要素?(    )
+  A.范围、时间和成本    B.时间、成本和质量    C.风险、时间和成本    D.资源、时间和成本
+14.机会成本是(  )。
+  A.开展一个新项目而必须付出的代价
+  B.为做一件事而放弃做另外一件事，假如做另外一件事可能得到收益
+  C.进行决策时无需考虑的虚拟成本
+  D.未来要开支的所有成本
+15.可以利用相关变量之间的历史关系进行(    )。
+  A.参数估算    B.类比估算      C.自下而上估算     D.参数估算或类比估算
+16.为了确保项目按既定预算完工而必须在后续阶段达到的绩效水平，可以用哪个指标来衡量?(    )
+  A.成本绩效指数    B.进度绩效指数     C.完工尚需绩效指数    D.项目关键比率
+17.项目的投资回收期是指(    )。
+  A.还清项目所有贷款所需的时间
+  B.从项目开始到项目获得的累计利润等于项目成本所需的时间
+  C.公司为启动项目而取得足够的资金所需要的时间
+  D.在项目投产后，公司收回股权投资所需的时间
+18.无法直接记人某个项目的成本，就只有用某种方法分摊到相关项目中。这种成本是(    )。
+  A.固定成本    B.可变成本    C.直接成本     D.间接成本
+19.预计的项目总成本为100000美元。在制定预算过程中，项目团队把预算确定为90000—110000美元。这种估算是(  )。
+  A.粗略量级估算    B.确定性估算     C.自下而上估算    D.类比估算
+20.估算成本过程旨在(  )。
+  A.对项目总成本作一个粗略的估算    B.估算项目中各项活动的成本
+  C.估算项目活动的直接成本          D.估算项目活动的人工费
+21.项目经理进行项目决策时，需要考虑以下各种成本，除了(  )。
+  A.间接成本    B.固定成本    C.可变成本    D.沉没成本
+22.通常用货币单位来表示项目成本，但有时也可用非货币单位，以便(    )。
+  A.提高成本估算的准确性              B.消除通货膨胀的影响，便于成本比较
+  C.更容易考核项目工作人员的业绩      D.更容易把成本与进度结合起来考核
+23.沉没成本是(  )。
+  A.管理储备中还没有用于项目的资金
+  B.已经列入项目预算的人力资源成本
+  C.为了防止过去的努力白费，而在进行决策时必须考虑的成本
+  D.已经花掉的资金，无论其用途是否合理
+24.项目成本管理包括下列所有过程，除了(    )。
+  A.估算资源    B.估算成本    C.制定预算    D.控制成本
+25.以下哪个代表着项目已经完工？(    )
+  A.EV=PV    B.EV=AC    C.EV=BAC     D.PV=BAC
+26.活动成本估算中通常包括以下各种成本，除了(    )。
+  A.活动所需全部资源的成本    B.直接成本和间接成本     C.应急储备    D.管理储备
+27.如果挣值是300000美元，实际成本是355000美元，计划价值是370000美元，项目的进度绩效指数是(  )。
+  A.85％    B.125％    C.116％     D.81％
+28.成本预算与成本绩效基准之间的差额是(    )。
+  A.管理储备    B.应急储备      C.应付未付的成本     D.应收未收的收入
+29.在编制项目预算时，通常会把各时期的成本基准确定为略高于预计的成本支出数，以便(    )。
+  A.允许适当的进度提前      B.应对已知风险的发生      C.考虑预计的债务    D.以上都是
+30.以下各项主要用于项目控制，除了(    )。
+  A.偏差分析     B.绩效报告     C.挣值分析    D.成本效益分析
+31.以下哪个基准不用于挣值测量(    )。
+  A.范围基准    B.进度基准    C.质量基准    D.成本基准
+32.活动成本估算要考虑下列所有成本，除了(    )。
+  A.人工成本    B.材料成本    C.通货膨胀补贴    D.机会成本
+33.在挣值管理中，什么情况下使用(BAC－EV)／(CPI×SPI)来计算完工尚需估算?(    )
+  A.成本超支且进度落后    B.成本超支但进度提前  C.成本节约但进度落后    D.成本节约且进度提前
+34.项目的成本偏差等于(    )。
+  A.EV减AC    B.EV减PV    C.AC减EV     D.AC减PV
+35.项目的成本偏差百分比等于(    )。
+  A.EV／AC    B.EV／PV    C.CV／PV    D.CV／EV
+36.以下哪个最好地描述了参数估算?(    )
+  A.先估算出各活动的成本，再汇总至工作包和控制账户的成本
+  B.先估算出各时间段的成本，再加总得到整个项目的成本
+  C.依据过去项目所表现出来的各因素之间的量化关系，来预测项目成本
+  D.利用专家判断，由资深专家进行项目的成本估算
+37.以下哪个概念能最好地支持“项目的成本超支往往是无法解决的” 这个说法?(  )
+A.机会成本    B沉没成本    C.固定成本    D.间接成本
+38.可以使用下列各种方法计算挣值，除了(    )。
+  A.顺推计算法    B.加权里程碑法    C.固定公式法     D.完成百分比法
+39.对于固定资产，每年提取等额的折旧数，这是在采用(    )。
+  A.加速折旧法    B.递减折旧法    C.直线折旧法     D.年数总和法
+40.确定性估算的准确度是(    )。
+A.±5％    B.±10％    C.±20％    D.4.50％
+参考答案及解析
+1.A.需要运用储备分析，为活动预留应急储备。
+  B.PERT估算，即三点估算，是估算成本的工具。
+  C.对于外购的货物或服务，卖方的报价是影响成本估算的重要因素。
+  D.正确答案。成本汇总是制定预算过程的工具与技术。
+  参见：PMBOKR指南第169页。
+  考点与答题技巧：估算成本的工具与技术。
+2.A.正确答案。成本管理计划的内容之一是绩效测量规则，其中最重要的又是挣值管理规则，包括：控制账户、计算挣值的方法、计算挣值的时间、进行预测的方法等。
+  B.虽然挣值管理也用来监督进度绩效，但是PMBOKR指南把挣值管理写在成本管理知识领域。
+  C.挣值管理的规则通常在成本管理计划中。
+  D.挣值管理的规则通常在成本管理计划中。
+  参见：PMBOKR指南第166页。
+  考点与答题技巧：成本管理计划的内容。
+3 A.干扰项，PMBOKR指南中无此提法。
+  B.成本预算如果等于成本绩效基准，那就是制定预算过程的输出。
+  C.成本基准是制定预算而非控制成本的输出
+  D.正确答案。成本预测(即预算预测，Budget Forecast)是控制成本过程的输出。成本预测其实就是项目完工估算(EAC)。
+  参见：PMBOKR指南第187页。
+  考点与答题技巧：控制成本的输出。
+4.A.风险登记册和人力资源计划是估算成本而非制定预算的输入。
+  B.正确答案。
+  C.风险登记册是估算成本而非制定预算的输入。
+  D.成本基准和项目经理意见不是制定预算的输入。成本绩效基准是制定预算过程的输出。
+  参见：PMBOKR指南第175页。
+  考点与答题技巧：制定预算的输入。只要你知道制定预算过程的主要工作是把各活动的成本汇总，就可把A和D排除掉(因为其中没有“活动成本估算”)。
+5.A.工作分解结构作为范围基准的一部分，是估算成本过程的输入。项目进度计划也是估算成本过程的输入。
+  B.人力资源计划是估算成本过程的输入，工作分解结构词典作为范围基准的一部分，也是估算成本过程的输入。
+  C.正确答案。质量成本是估算成本过程的技术与工具，而不是输入。
+  D.风险登记册和项目进度计划都是估算成本过程的输入。
+  参见：PMBOKR指南第169页图7—2，解读第141页。
+  考点与答题技巧：估算成本过程的输入。必须记得：质量成本是工具与技术，而不是输入或输出。
+6.A.正确答案。完工估算等于实际成本加完工尚需估算。由于实际成本是已知的，只要算出完工尚需估算即可。由项目管理团队对ETC进行自下而上估算，最麻烦，但也最准确，因为要开展实际调查。
+  B.此方法假设所有剩余工作都将按预算单价完成。
+  C.这种方法假设项目将按截至目前的绩效水平继续进行。
+  D.如果截至目前的成本绩效和进度绩效都不理想，又须按期完工，则用关键比率来估算。
+  参见：PMBOKR指南第184—185页。
+  考点与答题技巧：完工尚需估算的计算。注意：后三种方法比较方便，但不一定能较好地反映项目后续时期的实际情况。
+7.A.可以在成本发生时进行成本核算。
+  B.可以在实际支付时进行成本核算。
+  C.可以在实际交货时进行成本核算。
+  D.正确答案。不同的干系人会在不同的时间，用不同的方法核算项目成本。
+  参见：PMBOKR指南第167页。
+  考点与答题技巧：项目成本核算的时间。进行成本核算的时间，取决于组织的财务会计制度。
+8.A.正确答案。CV＝EV－AC=100－120＝－20。
+  B.这是进度偏差。
+  C.毫无道理的选项。
+  D.毫无道理的选项。
+  参见：PMBOKR指南第182页，解读第134页。
+  考点与答题技巧：挣值管理中的指标计算。
+9.A.项目经理有权决定直接成本的开支。
+  B.项目经理有权决定固定成本的开支。
+  C项目经理有权动用应急储备。
+  D.正确答案。项目经理通常无权决定动用管理储备，必须经管理层的批准。
+  参见：PMBOKR指南第177页，解读第142页。
+  考点与答题技巧：项目经理对成本开支的权力。
+10.A.正确答案。如果管理层认为BAC已不可实现，就应该以新预测的EAC为基础计算TCPI。在经过批准后，此EAC就成为新的BAC。
+  B.可能导致BAC明显不可实现，但不是必然的。
+  C.与题干无关。
+  D与题干无关。
+  参见：PMBOKR指南第185页。
+  考点与答题技巧：完工尚需绩效指数。
+11.A.正确答案。回归分析是最典型的参数估算，如Y=ax。
+  B.学习曲线是随着经验的积累，人们完成同样一个单位工作所需的时间会逐渐、呈一定规律地减少。学习曲线也可以说是一种参数估算，但没有回归分析常用。
+  C.自下而上估算与参数估算是两种相互独立的技术。
+  D.关键路径法是相对于三点估算而言的，只考虑最可能的情况。
+  参见：PMBOKR指南第172页，解读第129页。
+  考点与答题技巧：参数估算。
+12.A.假设项目已发生的成本偏差是典型的，此偏差还会在以后继续同样规模地发生，就采用这个公式。
+  B.假设项目已发生的成本偏差是非典型的，且原来预算的成本仍然有效，就采用这个公式。
+  C.按过去的成本绩效指数在考核时点重新估算完成项目所需成本。这个方法其实与A一样。
+  D.正确答案。应该采用多种方法计算完工估算，以便相互比较，得出比较合理的完工估算。
+  参见：PMBOKR指南第1 84页，解读第135页。
+  考点与答题技巧：完工估算的计算。
+13.A.正确答案。挣值管理综合考虑项目范围、成本与进度指标。
+  B.挣值管理不直接包括质量指标。
+  C.挣值管理不直接包括风险指标。
+  D.挣值管理不直接包括资源指标。
+  参见：PMBOKR指南第181页，解读第133页。
+  考点与答题技巧：挣值管理。挣值管理，尽管所计算的指标只限于进度和成本，但也整合了项目范围。
+14.A.有一点关系，但没有说明机会成本的本质。
+  B.正确答案。这就是机会成本的解释。
+  C.作决策时，通常要考虑机会成本。
+  D.干扰项，与机会成本无关。
+  参见：解读第132页。
+  考点与答题技巧：机会成本。
+15.A.不全面，尽管此项说法不错
+  B.不全面，尽管此项说法不错
+  C.自下而上估算是从具体活动的成本估算开始，再到工作包、控制账户和整个项目，不一定与相关变量之间的历史关系有关。
+  D正确答案。可以根据相关变量之间的历史关系进行参数估算或类比估算。
+  参见：PMBOKR指南第177页。
+  考点与答题技巧：制定预算的工具与技术。
+16.A.成本绩效指数针对过去已完成的工作。
+  B.进度绩效指数针对过去已完成的工作。
+  C.正确答案。完工尚需绩效指数针对未来的工作。
+  D.要确保项目在规定日期完工，就使用关键比率来计算完工尚需估算。
+  参见：PMBOKR指南第185页。
+  考点与答题技巧：完工尚需绩效指数。
+17.A.还清贷款与投资回收不是同样的概念，也不是可比的概念。
+  B.正确答案。符合投资回收期的定义。投资回收期是指用多长时间能把项目投资收回来，通常是项目建设期加项目投产后的累计运营利润达到投资金额所需的时间。
+  C.干扰项，与题干无关。
+  D.时间概念不清，而且“股权投资”与“项目投资”不可比。
+  参见：解读第130页。
+  考点与答题技巧：项目的投资回收期。
+18.A.与题干无关。固定成本是不随产量的变化而变化的成本。
+  B.与题干无关。可变成本是随产量的变化而变化的成本。
+  C直接成本是可直接记入项目的成本，通常是为某个项目专门发生的成本。
+  D.正确答案。间接成本是不能直接记人某个项目，需要在多个项目之间分摊的成本。典型的间接成本是项目执行组织的总部管理费。
+  参见：解读第131页。
+  考点与答题技巧：直接成本与间接成本。
+19.A.粗略量级估算的准确性为实际成本的±50％，是在没有详细数据的情况下进行的初步估算。
+  B.正确答案。准确性在±10％以内，为确定性估算。
+  C.自下而上是一种估算方法，其结果可能是确定性估算。
+  D.类比估算的准确性通常不能达到±10％。
+  参见：解读第129页。
+  考点与答题技巧：成本估算的准确度。
+20.A.对项目总成本作粗略估算是项目启动阶段的工作。
+  B.正确答案。估算成本过程旨在对项目活动的成本进行估算。
+  C.未能全面反映应估算的成本项。估算的活动成本中肯定包括直接成本，但也可包括间接成本。
+  D.未能全面反映应估算的成本项。除人工费以外，也应估算其他各种成本，如材料、设备成本。
+  参见：PMBOKR指南第168页，解读第125页
+  考点与答题技巧：估算成本过程，成本估算应考虑将向项目收费的全部资源。
+21.A.进行决策时，需要考虑以后可能发生的间接成本。
+  B.进行决策时，需要考虑以后可能发生的固定成本。
+  C.进行决策时，需要考虑以后可能发生的可变成本。
+  D.正确答案。沉没成本作为已经支出的费用，不影响项目的决策。决策是针对未来的。
+  参见：解读第132页。
+  考点与答题技巧：各种成本概念。
+22.A.用什么单位表示成本，与估算的准确性没有关系。
+   B.正确答案。如果通货膨胀比较厉害，不同时期的货币成本就不可比较，而用人日数、人时数等表示的成本却仍可比较。
+  C.与题干无关。
+  D.与题于无关。
+  参见：PMBOKR指南第168页。
+  考点与答题技巧：成本的计量单位。
+23.A.已经花掉的钱，才是沉没成本。
+  B.干扰项，与题干无关。
+  C.进行决策时，绝不能考虑沉没成本。
+  D.正确答案。符合沉没成本的含义。
+  参见：解读第132页。
+  考点与答题技巧：沉没成本。
+24.A.正确答案。估算活动资源是项目时间管理的过程。
+  B.估算成本是项目成本管理的第一个过程。
+  C.制定预算是项目成本管理的第二个过程。
+  D.控制成本是项目成本管理的第三个过程。
+  参见：PMBOKR指南第165页，解读第125页。
+  考点与答题技巧：项目成本管理的过程。
+25.A.仅反映进度无偏差，与是否完工没有关系。
+  B.仅反映成本无偏差，与是否完工没有关系。
+  C.正确答案。当挣值等于完工预算时，’说明项目的总计划价值已被完全挣回，项目已经完工。
+  D.计划价值等于完工预算，只能说明项目应该完工，不能反映实际是否完工。
+  参见：PMBOKR指南第182页
+  考点与答题技巧：挣值管理
+26.A.需要考虑将向项目收费的全部资源的成本。
+  B.应该包括直接成本，可以包括间接成本。
+  C.应该包括应急储备。
+  D.正确答案。进行活动成本估算时不需考虑管理储备，在制定项目预算时可能需要考虑管理储备。
+  参见：PMBOKR指南第174页。
+  考点与答题技巧：活动成本估算、应急储备和管理储备。
+27.A.这是成本绩效指数，CV=EV／AC=300000／355000=85％。
+  B.错误的计算结果。
+  C.错误的计算结果。
+  D.正确答案。SPI=EV／PV=300000／370000=81％
+  参见：PMBOKR指南第183页，解读第134页。
+  考点与答题技巧：进度绩效指数的计算。
+28.A.正确答案。成本预算中可包括管理储备，成本绩效基准中肯定不包括管理储备。成本预算大于或等于成本绩效基准。
+  B.应急储备既是成本基准的一部分，也是成本预算的一部分。
+  C.应付未付款属于项目的债务，与题干无关。
+  D.应收未收款属于项目已付出的预付款，与题干无关。
+  参见：PMBOKR指南第174页。
+  考点与答题技巧：成本基准与成本预算。
+29.A.不全面，尽管此项说法不错。
+  B.不全面，尽管此项说法不错。 
+C.不全面，尽管此项说法不错。
+  D.正确答案。把项目结束之前各时期的成本基准定为略高于预计的支出数，可以允许适当的进度提前，应对已知风险的发生，考虑应付未付款。注意：在项目结束时，项目的成本基准应该等于支出数(未考虑管理储备)。
+  参见：PMBOKR指南第178—179页，解读第142页。
+  考点与答题技巧：成本基准与资金支出。
+30.A.偏差分析是控制成本、控制进度、控制范围和报告绩效的工具。这四个过程都属于监控过程组。
+  B.绩效报告是监控项目工作、监控风险和管理采购等监控过程的输入。
+  C.挣值分析用于监控项目的进度和成本绩效。
+  D.正确答案。成本效益分析是规划质量过程的工具，也可用于项目选择。
+  参见：PMBOKR指南第180页。
+  考点与答题技巧：项目监控。
+31.A.挣值管理整合了项目范围、进度和成本。
+  B.同上。
+  C.正确答案。挣值管理中不对质量进行考察。
+  D同A。
+  参见：PMBOKR指南第181页。
+  考点与答题技巧：挣值管理、绩效测量基准。
+32.A.人工成本是活动成本的重要组成部分。
+  B.材料成本是活动成本的重要组成部分。
+  C.进行成本估算时，可考虑通货膨胀的风险，并准备相应的应急储备。
+  D.正确答案。进行决策时需要考虑机会成本，但机会成本不是实际会发生的成本，不应计入活动成本估算中。
+  参见：PMBOKR指南第168页，解读第132页。
+  考点与答题技巧：活动成本估算、成本种类。
+33.A.正确答案。如果成本超支、进度落后，又必须在规定日期完工，就要使用这个公式。
+  B.解释见A。
+  C.同上。
+  D.同上。
+  参见：PMBOKR指南第185页，解读第135页。
+  考点与答题技巧：完工尚需估算的计算方法。完工尚需估算可用多种方法得出，应该掌握各种方法的适用条件。
+34.A.正确答案。
+  B.EV减PV，所得到的是进度偏差。
+  C.公式的减数和被减数，反掉了。
+  D.AC与PV之间没有任何共同的地方，把它们进行比较毫无意义。
+  参见：PMBOK○R指南第182页，解读第134页。
+  考点与答题技巧：成本偏差的计算方法。要把两个东西进行比较，这两个东西之间必须既有相同的地方，又有不同的地方。
+35.A.EV与AC之比值，是成本绩效指数。
+  B.EV与PV之比值，是进度绩效指数。
+  C.CV与PV之比值，没有什么实际意义。
+  D.正确答案。
+  参见：解读第134页。
+  考点与答题技巧：成本偏差百分比的计算方法。PMBOK○R指南第3版中有成本偏差百分比和进度偏差百分比的计算公式，出现在沟通管理知识领域中。
+36.A.这是自下而上的估算方法。
+  B与参数估算无关。
+  C，正确答案。回归分析是参数估算方法的典型代表，公式为：Y=a+hx.+Cx，。
+  D.利用专家判断，这是类比估算的方法。
+  参见：PMBOK○R指南第172页，解读第128页。
+  考点与答题技巧：参数估算方法。
+37.A.机会成本与成本超支无关。
+  B正确答案。所有已经超支的成本属于沉没成本，而沉没成本是无法收回来的。
+  C.固定成本与成本超支或节约无关。
+  D.间接成本与成本超支或节约无关。
+  参见：PMBOK○R指南第182页，解读第132页。
+  考点与答题技巧：沉没成本的含义。
+38 A.正确答案。顺推计算法用来计算活动的最早开始时间和最早结束时间。
+  B.这是PMBOKR指南中直接提到的方法。某个里程碑实现了，就算完成了总工作量的百分之几。
+  C.这是PMBOKR指南中直接提到的方法。如50／50规则，就是固定公式法的一种。
+  D.这是PMBOKR指南中直接提到的方法。由相关工作的负责人自行估计已经完成的工作量。这是最主观的方法。
+  参见：PMBOKR指南第166页。
+  考点与答题技巧：计算挣值的不同方法。
+39.A.用加速折旧法，每年提取的折旧数不等。越早的年份，提取的折旧数越多。
+  B.杜撰出来的说法。
+  C.正确答案。
+  D.年数总和法是加速折旧法的一种。
+  参见：解读第132页。
+  考点与答题技巧：折旧的计算方法。
+40.A.PMBOKR指南中没有提到这种准确度。
+  B.正确答案。
+  C.PMBOKR指南中没有提到这种准确度。
+  D.粗略量级估算的准确度在±50％。
+  参见：PMBOKR指南第168页。
+考点与答题技巧：粗略量级估算与确定性估算的准确度。
+
