--- a/manage/pmp/9-人力资源.md
+++ b/manage/pmp/9-人力资源.md
@@ -3,3 +3,507 @@
 * PMP考试技巧和真题汇总详解 - 豆丁网 
     http://www.docin.com/p-958653479-f15.html
     137
+* PMP模拟题2 - 综合课件 - 道客巴巴 
+    http://www.doc88.com/p-0601518040183.html
+    9
+* (模二)PMP全真模拟题v.(精品) - 综合课件 - 道客巴巴 
+    http://www.doc88.com/p-2991202792484.html
+    52
+# PMP试题第九章 项目人力资源管理-历年试题资料-中培课堂 http://www.zpedu.com/SubjectInfo1465.html
+    31
+
+# PMP考试      资源直方图与资源日历的区分   PMP培训_南京石泉_新浪博客 http://blog.sina.com.cn/s/blog_65d12fad0102v2td.html
+
+有题目如下：
+                              项目进行中，有2名关键资源突然辞职，项目经理应该首先更新下列哪份文件？
+                              A、进度计划   B、资源直方图  C、资源日历   D、项目日历
+                 答案选 C、资源日历
+ 
+                 资源直方图和资源日历的区分，是PMP考试必考内容，答题关键是正确区分资源直方图和资源日历的概念。
+                资源直方图，指：单位时间所需要的资源数量，它受进度计划影响，当进度计划改变时，资源直方图会发生改变。比如：挖一条渠，1个人挖需要挖4天，4个人挖需要挖1天。如果计划2天挖完，每天需要几个人？答案是每天需要2个人。每天需要2人，就是资源直方图，它是一个相对主观的概念，先不考虑实际上有没有这么多资源，只考虑要符合进度要求，单位时间需要多少人。当进度计划发生改变时，才需要改变资源直方图。
+                 资源日历，指：资源可供项目使用的时间，即资源什么时候可以使用，可以使用多上时间。它是一个相对客观的概念，就是现实中有哪些资源可以使用，受资源可用性（资源是否到位、生病、请假、辞职等）影响。
+                 在9.1人力资源规划的输出人力资源管理计划中的人员配备管理计划中，显示有资源日历，从过程的时间上来说，不应该有资源日历，因为此时资源尚未到位，不知道资源的可用时间。在该内容显示的对应图表不是资源日历，是资源直方图，这是正确的。因为人员配备管理计划在此时应该包括：不同时间段项目需要哪些及多少资源，即资源直方图。因此，人员配备管理计划中所说的，其实还是资源直方图。
+
+
+# PMP项目管理师考试试题及答案解析（五）_PMP考试_PMP_希赛网 http://www.educity.cn/pmp/1777164.html
+
+  >>>>>>点击进入2016年PMP考试模拟试卷学员专用版在线测试
+
+       下面是由PMP学院整理的PMP项目管理师考试试题及答案解析，希望能帮助学友们。
+
+       练习题
+       1.Senior management and the project manager to an international development project.The project sponsor provides documents as input to develop the project charter,The project manager has the statement of wok,business case,contract,organizational process,documents,as well as other documents.What should be the next step of the project manager?
+       A.Consolidate all the documents and use them as input to the project charter.
+       B.Consoliate on the most important documents and use only these documents as input.
+       C.Use the unique expert judgment to assess all of the input documents.
+       D.Use the unique program to validate the documents.
+       在一个拥有高级管理人员和项目经理的国际发展项目上。项目发起人提供文件，作为编制项目章程的依据。项目经理已经制作出了包括项目工作说明书、合同、组织过程文件以及其他文件。项目经理下一步应该怎么做？
+       A、整合所有的文档并把它作为编制项目章程的依据。
+       B、整合最重要的文件，仅把这些文件作为依据。
+       C、使用独特的专家判断来评估所有的依据文件。
+       D、使用独特的程序来验证所有的依据文件。
+       解析：A。此题纠结的是AB项。这里涉及文化的差异性。A项中的“所有的文档”实际指的是题干中的“项目工作说明书、合同、组织过程文件以及其他文件”。参考PMBOK·P66可知，这是在考查项目章程的输入。
+       2.Project manager according to the agreed project scope required the ability to determine the project team member candidates.What should the project manager do?
+       A.Negotiate with the functional manager to distribute the resource of project.
+       B.Negotiate with the identified resources to join the project.
+       C.Escalate the resource needs to the project sponsor immediately.
+       D.Update the risk management log with the need for compe
+       项目经理根据交付约定项目范围所需的能力来确定项目团队成员候选人。项目经理应该怎么做？
+       A、与职能经理协商，为项目分配资源。
+       B、与确定的资源协商让其加入项目。
+       C、立即将资源需求上报给项目发起人。
+       D、将能力需求更新到风险管理日志中。
+       解析：A。注意在PMBOK中，项目组织结构默认是矩阵式组织。而在矩阵式组织结构中，项目经理没有人事权，职能经理采用人事权，而项目经理和职能经理是平级关系，所以项目经理要人得与职能经理协商或者谈判，才能解决实际用人问题。
+       3.The project team finds that the project is likely to be exposed to significant financial risk.What strategy should be used to manage this type of risk?
+       A.Avoid.
+       B.Share.
+       C.Transfer.
+       D.Accept.
+       项目团队发现项目有可能暴露于重大财务风险当中。若要管理这类风险，应该使用哪种策略？
+       A、回避
+       B、分享
+       C、转移
+       D、接受
+       解析：C。在PMBOK·P344转移一项中有这样一句话：转移风险策略对处理风险的财务后果最有效。团队为了将风险降到最低，免于财务处于最大风险中，可以采用转移这种降低风险的应对策略把某风险的部分或全部消极影响连同责任转移给第三方。接受是不变更项目管理计划而被动接受风险，如建立应急储备、安排时间、资金或资源等。
+       4.The director of the business unit submits a request for a new software application.The project manager determines the need for project requirements gathering and scope development.Which of the following should the project manager be performed?
+       A.Create the technical specification and requirements traceability martrix.
+       B.Create issue log and perform risk analysis.
+       C.Document a product description and create a list of stakeholsers.
+       D.Draft the current and future processes and draft the work breakdown structure.
+       业务部门的总监提交了一份有关新的软件应用程序的变更请求。项目经理确定了为项目收集需求和定义范围的必要性。下列哪一项是项目经理需要执行的内容？
+       A、创建技术规范和需求跟踪矩阵
+       B、创建问题日志和执行风险分析
+       C、描述产品文档和创建干系人列表
+       D、起草项目当前和未来的流程以及起草工作分解结构
+       解析：C。题干的关键词是“收集需求和定义范围”。收集需求是为实现项目目标而定义并记录干系人需求的过程。这就需要参考干系人的登记册。而定义范围是制定项目和产品详细描述的过程，所以项目经理可以执行的内容必然是B。
+       5.During the execution phase,marketing informs the sponsor that focus groups give the product mixed reviews and a minor change is required.The sponsor instructs the project manager to incorporate the change,because it will not change the scope or budget.What should the project manager do next?
+       A.Document the requested change.
+       B.Assign responsibility for implementing the change.
+       C.Communicate the change to the affected parties.
+       D.Convene the team to evaluate the impact of the change.
+       在执行阶段，市场部通知项目发起人中心小组提供了产品的混合审查,需要进行细微变更。项目发起人指示项目经理包含变更，因为该变更不会改变范围或预算。项目经理接下来应该怎么做？
+       A、记录要求的变更
+       B、为执行变更分配职责
+       C、与受影响的方沟通该变更
+       D、召集团队来评估变更的影响。
+       解析：A。变更请求可以使直接的或间接的，也可以是外部或内部提出，也可以是自选的或由法律/合同提出的，但所有的变更请求必须是正式的，必须被记录。据此结合题干可知选择A。此题有迷惑性的是C项，应该是先A后C。
+       6.The project manager encounters a challenge to the budget.At the beginning of the project,they obtain budget approval of US$1 million broken down as follows:
+       US$200,000 for material expense.
+       US$100,000 for travel.
+       US$100,000 for depreciation of capital.
+       After the project starts,new requirements may incur an additional US$50.000 for labor.Due to budget contraints,the project manager cannot obtain additional funds for the project.Since the project schedule is tight and cannot be delayed,what should the project manager do？
+       A.Negotiate with the sponsor to get enough budgeted before continuing the project.
+       B.Check with the project team to get consensus before continuing the project.
+       C.Ask for more time to deliver the project.
+       D.Accept the budget shortage as a risk and continue the project.
+       项目经理遭遇到了预算方面的挑战。项目开始时，他们获得了100万美元的预算批准，分解如下：
+       20万美元的材料费用支出
+       10万美元的旅行费用支出
+       10万美元的资本折旧
+       项目开始后，新的需求可能产生50,000美元的额外人工费。由于预算有限，项目经理无法为项目获得额外的资金，由于项目工期紧并且不能延期，项目经理应该怎么做？
+       A、与发起人谈判，以便在继续项目之前获得足够的预算。
+       B、在继续项目之前，与项目团队达成共识。
+       C、要求更多的时间来交付项目。
+       D、把预算短缺作为一项风险，并继续项目。
+       解析：D。题干显示，项目经理无法获得完成项目的额外资金，工期紧不能拖延。怎么办？只能将其列为一个风险，继续从事项目；A项是一种威胁手段，PMI不提倡；B项不完善，这个达成的共识是什么呢？没有完成项目的资金，跟团队达成共识实际意义也不大；C项首先排除，这与题干相互矛盾。
+       7.A project is the use of lessons learned documentation demonstrates a poor use of historical information all of the project.Which if the following tools should be used to find the causes of this issue?
+       A.Control chart.
+       B.Pareto chart.
+       C.Run chart.
+       D.Fishbone diagrams.
+       某项目正在使用的经验教训证明文件表明在整个项目过程中历史资料的利用较差。若要找到这个问题的原因，项目经理应该使用下列哪一项工具？
+       A、控制图
+       B、帕累托图
+       C、趋势图
+       D、鱼骨图
+       解析：D。据题干，找到问题发生的原因，才能直观显示各种因素如何与潜在问题或结果的联系。鱼骨图就是通过不断的发现某个可能的根本原因来达成完成项目的某个目标。项目整个过程利用历史资料较差，到底是哪一个环节出了问题呢？通过鱼骨图不断寻找根本原因直至找到利用率低下的原因。
+       8.Because there are too many conflicting discussions for the project deliverables,a project for the implementation of the new system encountered a problem when it is published,leading to the project manager to leave the company.A new project manager is assigned to the project.What is the new project manager should first take action?
+       A.Finalize the project management plan and communicate with relevant stakeholders.
+       B.Escalate to the project sponsor and seek support to deal with the ongoing discussions.
+       C.Develop a work breadown structure and communicate with all relevant stakeholders.
+       D.Formalize a project charter and request approval from the sponsor and the key stakeholder.
+       由于对于项目可交付成果有太多互相矛盾的讨论，一个实施新系统的项目在发布时发生问题，导致项目经理离开公司。一名新项目经理被分配到该项目中。新项目经理首先应该采取的行动是什么？
+       A、完成项目管理计划，并与相关干系人沟通。
+       B、上报项目发起人，并寻求支持，来处理正在进行的讨论。
+       C、制作工作分解结构，并与所有相关干系人沟通。
+       D、正式确定项目章程，并要求获得项目发起人和关键干系人的批准。
+       解析：D。据题干，这是一个新实施的项目，有新的项目经理。所以新项目经理在上任时，应该首先确认项目章程是否批准与发布，并积极要求得到组织的授权以及动用组织资源。B项不可能，而AC项还为时过早。
+       9.What information does a control chart provide to a project manager?
+       A.Indicates the need for variance analysis.
+       B.Illustrates how a process behanves over time.
+       C.Helps a project manager to change the project scope.
+       D.Identifies the project risks.
+       控制图会向项目经理提供什么信息？
+       A、指出偏差分析的需求
+       B、说明流程是如何随着时间表现的
+       C、帮助项目经理改变项目范围
+       D、识别项目风险
+       解析：A。控制图可以用来检测成本和进度偏差、产量、范围变更频率及其他管理工作成果。在某一个具体的时点出现超出控制线时，表示失控，这时就需要进行偏差分析，而得到的结果无论好坏都是项目经理及其团队需要的，所以选择A。而B项是在阐述流程图；C项不可能，这属于范围蔓延；尽管项目经理也需要在整个项目生命周期内识别风险，但此时识别风险不是项目经理及其团队最需要处理的事情，据此可以排除D。
+       10.In the project implementation process,some of the key stakeholders said there is not enough information to share with them,while others argue for disaster caused by flooding water.And they are dissatisfied with the information passed.Which one of the following process in project?
+       A.Identify Stakeholders.
+       B.Plan CommunicationS.
+       C.Distribute Information.
+       D.Manage Stakeholder Expectations.
+       项目实施过程中，一些关键干系人说没有足够的信息与他们分享，而其他干系人则认为信息泛滥成灾。并且他们对于信息的传递方式很不满意。请问，项目处于以下哪一个过程？
+       A、识别干系人
+       B、规划沟通
+       C、发布信息
+       D、管理干系人期望
+       解析：C。发布信息是指按计划项项目干系人提供相关信息的过程。题干显示，有些干系人收到的信息过多，有些干系人收到的信息有限。这是处于发布信息阶段。而之所以会出现这种现象是因为沟通规划不当造成的。
+
+       返回目录：PMP项目管理师考试试题及答案解析汇总
+
+有效的团队建设的直接结果是（）。
+A．提高了项目绩效
+B．建设成一个高效、运行良好的项目团队
+C．使项目小组成员认识到对项目的绩效负责的是项目经理
+D．提高了项目干系人和小组成员为项目贡献力量的能力
+
+信管网参考答案：B
+
+* PMP 第9章  项目人力资源管理 试题 及解析_爱随风来_新浪博客 
+    http://blog.sina.com.cn/s/blog_75cd9f870100vk1v.html
+
+1.作为组建项目团队过程的输出，资源日历通常用来记录(    )。
+  A.项目团队成员的可用工作时间与休假时间
+  B.项目团队成员的正常工作时间以及在假期中工作的报酬标准
+  C.项目在何时需要何种以及多少资源
+  D.需要资源平衡的资源种类
+2.可以使用以下哪种结构来把组织中的部门与项目中的工作包联系起来?(    )
+  A工作分解结构      B.资源分解结构      C.风险分解结构      D.组织分解结构
+3.以下哪个说法是正确的?(    )
+  A.集中办公的团队更需要沟通规划         B.虚拟团队更需要沟通规划
+  C.项目管理团队更需要沟通规划           D.项目团队更需要沟通规划
+4.责任分配矩阵具有以下作用，除了(    )。
+  A.反映与每个人有关的所有活动           B.反映与每个活动有关的所有人
+  C.为每个工作指定唯一责任点             D.使每个人都只负责一项工作
+5.制订人力资源计划过程的输出包括(    )。
+  A.人员配备管理计划    B.角色与职责     C.项目组织机构图          D.人力资源计划
+6.高效的项目团队应该(    )。
+  A.以领导为导向          B.以工作为导向    C.集中办公                D.通过电子网络联系
+7.项目人力资源计划包括以下所有内容，除了(    )。
+  A.项目中的角色与职责    B.资源直方图   C.项目组织机构图          D.人员配备管理计划
+8.项目已经启动，刚刚进入了计划编制阶段。在计划编制阶段的早期，项目经理通常应该采用什么领导风格?(    )
+  A.指挥                 B.授权           C.参与                   D.民主
+9.项目组织机构图可以展示以下所有，除了(    )。
+  A.团队成员的角色       B.团队成员的职权  C.成员之间的报告关系    D.成员之间的隶属关系
+10.评选月度最佳员工(    )。
+  A.是一种良好的做法，能有效激励员工        B.是一种零和奖励，会破坏团队凝聚力
+  C.是一种赢——赢奖励，会提高团队凝聚力    D.是一种输——输奖励，会破坏团队凝聚力
+11.以下哪个不是管理项目团队过程的输出?(    )
+  A.变更请求        B.事业环境因素更新      C.项目管理计划更新     D.团队绩效评价
+12.下列哪项可以使认可和奖励系统最为有效?(    )
+  A.给优秀员工大幅度涨工资                  B.对加班工作多的员工给予最多奖励
+  C.根据员工的重要需求安排奖励              D.在项目结束时进行一次性奖励
+13.人员的预分派不适用于(    )。
+  A.在投标文件中所指定的人员                B.具有特定的知识和技能的人员，项目因他们才存在
+  C.项目章程中指定的项目经理                D.根据雇佣合同就位的优秀专业人员
+14.为了获得项目所需的人力资源，项目经理经常要与以下各方谈判，除了(    )。
+  A.高级管理层        B.职能部门经理        C.其他项目经理         D.外部资源供应商
+15.以下哪个是组建项目团队过程的输入?(    )
+  A.活动资源需求      B.资源日历            C.组织机构图           D.项目管理计划
+16.管理项目团队过程属于(    )。
+  A.规划过程组        B.执行过程组          C.监控过程组            D.收尾过程组
+17.在项目环境中，冲突是不可避免的，会因各种原因而产生。冲突最常见的来源包括(    )。
+  A.成员个性、资源稀缺、进度优先级排序      B.进度优先级排序、资源稀缺、成员个性
+  C.资源稀缺、进度优先级排序、成员个性      D.资源稀缺、进度优先级排序、个人工作风格
+18.可以用以下各种形式来记录团队成员的角色与职责，除了(    )。
+  A.职位任命文件    B.层级型组织结构图      C.责任分配矩阵          D.职位描述文件
+19.通过分享权力和使用人际关系技能，使他人为了共同目标而相互合作。这是(    )。
+  A.领导力          B.团队建设              C.激励                  D.影响力
+20.项目人力资源管理不包括以下哪个过程?(    )
+  A.估算项目资源    B.管理项目团队          C.组建项目团队          D.建设项目团队
+21.在矩阵式管理之下，项目经理应该如何取得项目所需的人力资源?(    )
+  A.指令职能部门经理提供所需的人力资源                B.从执行组织外部招聘尽可能多的人力资源
+  C.直接向职能部门中的员工发出加入项目团队的邀请信    D.与职能部门经理就所需人力资源进行谈判
+22.评价项目团队有效性的指标包括(    )。
+  A.个人技能的改进、团队能力的改进、成员离职率下降、团队凝聚力提高
+  B.项目经理的权威加强、团队能力的改进、成员离职率下降、团队凝聚力提高
+  C.个人技能的改进、团队能力的改进、团队凝聚力提高、项目业绩提高
+  D.团队能力的改进、成员离职率下降、团队凝聚力提高、项目业绩提高
+23.在项目管理中，下列哪种谈判方法最有利于解决冲突?(    )
+  A.关注利益，而非立场    B.关注结果，而非起因     C.关注方法，而非个人    D.关注结果，而非过程
+24.以下关于项目管理团队的说法都是正确的，除了(    )。
+  A.项目管理团队是项目团队中从事管理和领导活动的成员的集合
+  B.项目管理团队又称为执行团队、核心团队或领导团队
+  C.项目管理团队可以是整个项目团队
+  D.项目管理团队的成员通常在整个项目生命周期中维持不变
+25.具有共同目标，通常不面对面工作，而是依靠电子通信工具相互联系的一群人，被称为(    )。
+  A.项目团队             B.虚拟团队                C.虚假团队             D.项目管理团队
+26.塔库曼的五阶段团队建设理论是(    )。
+  A.形成、震荡、规范、成熟和解散                   B.磨合、震荡、规范、成熟和解散
+  C.规范、磨合、震荡、成熟和解散                   D.形成、规范、提高、成熟和解散
+27.为了更好地完成工作任务，通常用责任分配矩阵来为每一项工作指定(    )。
+  A.唯一的责任人                                   B.两个责任人，以便相互帮助
+  C.三个责任人，以便集体领导                       D.一个或以上的责任人，视具体情况而定
+28.建设项目团队过程的输出包括(    )。
+  A.项目人员分派           B.活动资源需求          C.资源日历           D.团队绩效评价
+29.以下关于人际交往的说法，正确的是(    )。
+  A.人际交往有利于认识更多的人，以便从熟人中招聘员工
+  B.人际交往是指与周围的人发展良好的私人关系，以便能招聘到稀缺人才
+  C.人际交往是指了解会影响人员配备管理的政治和人际因素
+  D.人际交往是指仅与同职业的人保持正式和非正式的互动
+30.出色的项目经理应该既是管理者又是领导者。领导涉及以下各项，除了(    )。
+  A.为干系人创造利益      B.有效地沟通      C.激发和激励人们     D.确定方向
+31.一个新员工被安排负责项目的资源保障工作，他必须了解项目可用资源的种类、属性、何时可用以及可用多长时间等信息，这时你建议他可以去查阅(    )。
+  A.WBS词典              B.采购管理计划     C.资源日历          D.人力资源计划
+32.在制定人力资源计划时，往往需要使用资源直方图说明什么时候需要多少资源。资源直方图中的基本要素包括(    )。
+  A.表示时间的横轴                          B.表示各时段所需资源数量的柱子
+  C.表示可用的最大资源数量的横线            D.以上都是
+33.以下哪个过程属于监控过程组?(    )
+  A.建设项目团队       B.管理项目团队       C.组建项目团队        D.以上都不是
+34.奖励应该针对(  )。
+  A.只有少数团队成员能够做到的事情          B.人人都能做到的行为
+C.大多数人能做到的行为                    D.团队成员解决管理层导致的问题的能力
+35.你所负责的跨国项目中的许多人都在虚拟团队中工作。下列哪项最有助于成功地管理跨国虚拟团队?(  )
+  A.细致地规划团队沟通                      B.了解团队成员之间的文化差异
+  C.鼓励采用面对问题的方法来解决冲突        D.指定一个成员充当联络员
+36.塔库曼的团队建设理论认为，团队的生命周期通常要经过如下几个阶段(    )。
+  A.形成、发展、规范、解散                 B.形成、磨合、规范、终止
+  C.形成、震荡、规范、成熟、终止           D.形成、发展、成熟、解散
+37.在项目执行过程中，应该通过以下哪项工作来了解团队成员的表现，向团队成员提供反馈，并对团队中的角色与职责进行适当调整?(    )
+  A.项目绩效评估       B.团队绩效评价      C.组织绩效评价       D.报告项目绩效
+38.赫兹伯格的双因素激励理论把与激励有关的因素分成(    )。
+  A.低层次因素与高层次因素                 B.成就因素、权力因素与亲和因素
+  C.保健因素与激励因素                     D.X因素与Y因素
+39.以下哪个最好地描述了职责分配矩阵的作用?(    )
+  A.用于分配项目计划编制工作               B.用于联系项目工作与团队成员
+  C.用于确定成员对项目工作的质量责任       D.用于项目团队建设
+40.人员配备管理计划中通常包括(    )。
+  A.职责分配矩阵      B.人员遣散计划       C.组织结构图         D.角色与职责
+参考答案及解析
+1.A.正确答案。完全符合PMBOKR指南中的描述。
+  B.资源日历中不会记录报酬标准。
+  C.这些情况不会在作为组建项目团队过程的输出的资源日历中出现，而是在作为人力资源计划的一部分的资源日历中出现。
+  D.与题干无关。已被过度分派的资源，才需要资源平衡。
+  参见：PMBOKR指南第224、229页。
+  考点与答题技巧：资源日历。
+2.A.工作分解结构是以可交付成果为导向的工作层级分解，工作分解结构定义项目的全部范围。其中通常不会列出负责工作包的部门。
+  B.资源分解结构是根据项目需要的资源类别和类型，对资源进行分类的层级结构。它与工作包、组织部门都没有直接联系。
+  C.风险分解结构是按风险类别来排列已识别风险的一种层级结构图，类别的划分标准可以是风险所属的项目阶段或部位，或者风险的共同原因。它与工作包、组织部门都没有直接联系。
+  D.正确答案。组织分解结构是对项目组织的一种层级描述，可在每个部门下列出其所负责的工作包。
+  参见：PMBOKR指南第220页。
+  考点与答题技巧：组织分解结构。首先排除B和C，再排除A；在初步选定D之后，再进一步确认其正确性。
+3.A.相比之下，B更正确。
+  B.正确答案。在虚拟团队中，沟通规划变得更为重要。例如，规定每个成员在收到其他成员的电子邮件后，必须在24小时内做出回复。
+  C.相比之下，B更正确。    D.相比之下，B更正确。
+  参见：PMBOKR指南第228页，解读第178页。
+  考点与答题技巧：虚拟团队的沟通计划。尽管每种团队都需要沟通规划，但虚拟团队更需要。
+4.A.按列来看，可以发现与每个人有关的所有活动。
+  B.从行来看，可以发现与每个活动有关的所有人。
+  C.每项工作都只能由一个人负责，以避免混乱。
+  D.正确答案。责任分配矩阵为每一项工作指定唯一责任人，但每个人可能同时对几项工作负责。
+  参见：PMBOKR指南第221页。
+  考点与答题技巧：责任分配矩阵
+5.A.人员配备管理计划是人力资源计划的一部分，相比答案D，不完全。
+  B.角色与职责是人力资源计划的一部分，相比答案D，不完全。
+  C.项目组织机构图是人力资源计划的一部分，相比答案D，不完全。
+  D.正确答案。人力资源计划是制定人力资源计划过程的输出。
+  参见：PMBOKR指南第217页。
+  考点与答题技巧：制定人力资源计划过程的输出。
+6.A.高效项目团队应该以工作任务和结果为导向(而不是以领导为导向)，并且有能力提交出完全符合要求的项目结果。
+  B.正确答案。高效的团队应该以工作为导向，即把完成工作任务放在第一位，而不是把取悦老板或其他事情放在第一位。
+  C.集中办公有助于项目团队建设，但虚拟团队也可能是高效的。
+  D.电子网络只是团队成员之间联络的一种方法，并不能直接决定团队是否高效。
+  参见：PMBOKR指南第235页。
+  考点与答题技巧：高效项目团队的特征。
+7.A.角色和职责是人力资源计划的内容之一。
+  B.正确答案。资源直方图是人员配备管理计划的一部分。
+  C.项目组织机构图是人力资源计划的内容之一。
+  D.人员配备管理计划是人力资源计划的内容之一。
+  参见：PMBOKR指南第222～225页。
+  考点与答题技巧：项目人力资源计划的内容。注意：在PMBOK○R指南中，人力资源计划等同于人力资源管理计划，但不同于人员配备管理计划。
+8.A正确答案。在项目规划(特别是规划阶段的早期)与收尾阶段，项目经理需要更多地运用指挥风格。
+  B.在执行阶段，项目经理可以更多地采用授权、参与和民主风格。
+  C.在执行阶段，项目经理可以更多地采用授权、参与和民主风格。
+  D.在执行阶段，项目经理可以更多地采用授权、参与和民主风格。
+  参见：解读第171～172页。
+  考点与答题技巧：项目不同阶段的领导风格。
+9.A.在项目组织机构图中，可以列出团队成员的姓名及其所承担的角色。
+  B.正确答案。通常，在组织机构图中仅指明某人的角色，而不列出其职权。
+  C.组织结构图中，通常都会反映成员之间的报告关系。
+  D.组织结构图中，通常都会反映成员之间的上下级关系。
+  参见：PMBOKR指南第223页。
+  考点与答题技巧：项目组织机构图。
+10.A.也许大家都这样认为，但不符合PMBOKR指南中的说法。
+  B.正确答案。评选月度最佳员工是一种赢——输奖励，即零和奖励，会破坏团队凝聚力。
+  C.评选月度最佳员工是一种赢——输奖励，即零和奖励，会破坏团队凝聚力。
+  D.评选月度最佳员工是一种赢——输奖励，即零和奖励，会破坏团队凝聚力。
+  参见：PMBOKR指南第234页。
+  考点与答题技巧：奖励的方法。注意：PMBOKR指南中关于最佳员工评选的说法，与大多数人的传统观念不同。
+11.A.变更请求是管理项目团队过程的输出。
+  B.事业环境因素更新是管理项目团队过程的输出。
+  C.项目管理计划更新是管理项目团队过程的输出。
+  D.正确答案。团队绩效评价是建设项目团队过程的输出。
+  参见：PMBOKR指南第241～242页。
+  考点与答题技巧：管理项目团队的输出。只有两个过程会导致事业环境因素更新：建设项目团队过程、管理项目团队过程。
+12.A.激励除了物质的奖励外，还有许多无形的有效奖励。而且，根据双因素理论，工资属于保健因素，而非激励因素。
+  B.只能奖励优良行为。如果加班是因计划不周或执行不力导致的，就不应受到奖励。
+  C.正确答案。奖励的目的是激励员工，而激励必须基于员工的重要需求。给别人需要的东西，才能激励别人。
+  D.项目经理应该在整个项目生命周期中及时开展认可与奖励，而不是等到项目结束时。
+  参见：PMBOKR指南第234页。
+  考点与答题技巧：认可和奖励。
+13.A.提交投标文件时，投标人并未正式启动可能的承包项目。所以，其在投标文件向招标人承诺的人选，是预分派的。
+  B.必须先把这些人员预约好，才能正式启动项目。
+  C.编写项目章程时，项目尚未正式启动。所以，在其中指定的人选是预分派的。
+  D正确答案。这个选项与预分派没有关系。
+  参见：PMBOKR指南第227页，解读第180页。
+  考点与答题技巧：人员的预分派。预分派是指在项目正式启动前就指定或预约某些重要人员。
+14.A.正确答案。项目经理与高级管理层不是平级的，所以不具备谈判的条件。
+  B.项目经理需要与职能经理谈判，确保在适当的时候获得适当的人员，并确保这些人员能够在项目所需要的时间段一直为项目工作。
+  C.项目经理需要与其他项目经理谈判，因为其他项目经理可能与本项目经理争夺同一人力资源。
+  D.项目经理需要与外部资源供应商谈判，以获取执行组织内部所缺少的人力资源。
+  参见：PMBOKR指南第227～228页。
+  考点与答题技巧：谈判与人力资源获取。
+15 A.活动资源需求是估算活动持续时间和制订人力资源计划的输入。
+  B资源日历是估算活动资源和估算活动持续时间的输入。
+  C，尽管组建项目团队时需要依据项目组织机构图，但这个选项与D比较，不如D全面。
+  D.正确答案。组建项目团队是执行过程组的过程，要用到项目管理计划这个输入。
+  参见：PMBOKR指南第226页，解读第179页。
+  考点与答题技巧：组建项目团队的输入。全部执行、监控和收尾过程都要用到项目管理计划这个输入。
+16.A.管理项目团队过程属于执行过程组。
+  B.正确答案。管理项目团队是项目人力资源管理中的执行过程之一。
+  C.在PMBOKR指南第3版中属于监控过程组，但第4版中已被调整到执行过程组。
+  D.不属于收尾过程组。
+  参见：PMBOKR指南第43页，解读第163页。
+  考点与答题技巧：项目管理过程组与管理项目团队过程。
+17.A.因成员个性引起的冲突是非常少的，大多数冲突都有其他更具体的原因。
+    B.进度优先级排序引起的冲突，没有资源稀缺引起的冲突多。
+    C.如果没有D，就可以选C。个性引起的冲突通常是很少的。
+    D.正确答案。冲突的主要来源包括资源稀缺、进度优先级排序和个人工作风格的差异。
+    参见：PMBOKR指南第239页，解读第174页。
+    考点与答题技巧：冲突的常见来源。
+18.A正确答案。此项不是PMBOKR指南中直接提到的。
+   B.层级型组织结构图是PMBOKR指南中直接提到的三种形式之一。
+   C.责任分配矩阵是PMBOKR指南中直接提到的三种形式之一，可显示工作包或活动与项目团队成员之间的联系。
+   D.职位描述文件是PMBOKR指南中直接提到的三种形式之一，可以详细描述团队成员的职责。
+  参见：PMBOKR指南第220～221页。
+  考点与答题技巧：组织机构图与职位描述。
+19.A.领导力是带领一个群体为共同目标而努力的能力。
+  B.团队建设是组织一群人为共同目标而协同工作。
+  C.激励是指针对个人的需求，既使团队成员得到自我满足，叉保证项目目标的实现。
+  D.正确答案。这个说法就是PMBOKR指南附录G中对影响力的定义。
+  参见：PMBOKR指南第409～411页。
+  考点与答题技巧：人际关系技能。注意：PMBOK○R指南附录G对领导力、团队建设、激励和影响力的定义，并不怎么合理，例如这些概念之间的界限不清。比较合理的定义是：领导力是指构建愿景，把愿景传达给下级并带领下级朝愿景努力的能力；团队建设是指开展各种活动来提高团队的凝聚力，使团队更像一个团队；激励是指基于人们的需求，投其所好，使人们自觉地朝目标努力；影响力是指以各种方法影响他人，以便通过他人来把事情办成。
+20 A.正确答案。没有估算项目资源过程。而估算活动资源过程则是项目时间管理的过程之一。
+  B.此项是项目人力资源管理的过程之一。
+  C.此项是项目人力资源管理的过程之一。
+D.此项是项目人力资源管理的过程之一。
+  参见：PMBOKR指南第217页。
+  考点与答题技巧：项目人力资源管理的过程。
+21.A.矩阵式组织中，项目经理与职能经理打交道主要靠谈判。
+  B.应该尽可能使用执行组织内部的人力资源。只有在内部的人力资源不足时，才从外面采购。
+  C.项目经理通过与职能经理谈判，确保项目在需要时获得具备适当能力的人员。
+  D.正确答案。项目经理要依靠谈判从职能部门获取人力资源。
+  参见：PMBOKR指南第227页。
+  考点与答题技巧：矩阵式组织中项目经理与职能经理的关系。注意：在项目期间，项目经理主要依靠谈判与职能经理打交道；主要依靠面对问题与高级管理层打交道——既报喜又报忧，与高级管理层把问题彻底谈开。
+22.A. 正确答案。完全符合PMBOKR指南中的描述。
+B.项目经理的权威加强，这不是评价团队有效性的直接指标。
+C.项目业绩提高，这不是评价团队有效性的直接指标。注意：项目业绩评估是管理项目团队过程的工具与技术。
+D.同上。
+参见：PMBOKR指南第235页。
+考点与答题技巧：评价团队的有效性的指标。
+23.A.正确答案。因为利益决定立场，所以应该关注利益而非立场。或者说，应该通过关注利益来关注立场。
+B.尽管不无道理，但与谈判不相关，也不是PMBOK的一个主要考点。
+C.同上。
+D. 尽管不无道理，但与谈判的相关性不大。这个选项与授权的相关性比较大。
+参见：PMBOKR指南第413页。
+考点与答题技巧：利益决定立场。
+24. A.项目管理团队是项目团队的一部分。
+B.注意：其中的“执行团队”，英文是Executive Team，“执行”相当于“首席执行官”中的”执行”。
+C.在小型项目上项目管理职责可能由整个项目团队担任。
+D.正确答案。项目团队(包括项目管理团队)具有开放性。在项目生命周期的不同阶段，成员的数量和种类会发生变化。
+  参见：PMBOKR指南第215页。
+  考点与答题技巧：项目管理团队。注意：一方面，项目管理团队是项目团队的一部分；另一方面，“项目管理团队”与“项目团队”这两个词又经常替换使用。
+25.A.项目团队的覆盖面太宽，不具有题干所要求的针对性。
+  B.正确答案。符合PMBOKR指南中虚拟团队的定义。
+  C.虚拟团队不等于虚假团队。而且，没有“虚假团队”这个术语。
+  D.项目管理团队的覆盖面太宽，不具有题干所要求的针对性。
+  参见：PMBOKR指南第228页，解读第178页。
+  考点与答题技巧：项目团队和虚拟团队。
+26.A.正确答案。符合团队建设依次要经历的五个阶段。
+  B.缺少“形成”，且“磨合”与“震荡”同义。
+  C.缺少“形成”，且“规范”的顺序不对，“磨合”与“震荡”同义。
+  D.缺少“震荡”，多了“提高”。
+  参见：PMBOKR指南第233页，解读第172页。
+  考点与答题技巧：塔库曼的团队建设五阶段模型。
+27.A.正确答案。不仅要求项目经理是项目的唯一责任点，而且要求项目中的每一项工作都有唯一责任点。
+  B.不符合唯一责任点的要求。
+  C.不符合唯一责任点的要求。    D.不符合唯一责任点的要求。
+  参见：PMBOKR指南第221页。
+  考点与答题技巧：责任分配矩阵。在常见的RACI矩阵中，对每项工作都只能出现一个A(Accountable)但可以出现两个或以上的R(Responsible)、C(Consulting)或I(Informing)。
+28.A.项目人员分派是组建项目团队过程的输出。
+  B.活动资源需求是估算活动资源过程的输出。
+  C.资源日历是组建项目团队过程和实施采购过程的输出。
+  D正确答案。团队绩效评价是建设项目团队的输出。团队建设旨在提高团队绩效。
+  参见：PMBOKR指南第235页，解读第179页。
+  考点与答题技巧：建设项目团队过程的输出。
+29.A不能反映人际交往的本质。而且，从熟人中招聘，可能违背职业道德中的公正价值观。
+  B.这个说法不全面。
+  C.正确答案。人际交往是指在尽可能广的范围内与他人开展正式或非正式互动，来了解与人员配备管理(如人员招聘)有关的各种政治和人际因素。
+  D.这个说法不全面。
+  参见：PMBOKR指南第222页。
+  考点与答题技巧：人际交往。
+30.A.正确答案。尽管好的领导工作可以使干系人获得利益，但这并不是领导的直接目的。
+  B.这是领导的部分内容。领导是指构建愿景(确定方向)、把愿景传达给下级(与下级沟通愿景)并激励下级朝愿景努力。
+  C.这是领导的部分内容。    D.这是领导的部分内容。
+  参见：PMBOKR指南第409页，解读第171页。
+  考点与答题技巧：领导的概念。
+31.A.WBS词典中可以有资源方面的信息，但不会这么全面。
+  B.采购管理计划中不会有这些内容。
+  C.正确答案。作为组建项目团队过程的输出的资源日历，其中有题干中所提及的各种信息。
+  D.人力资源计划中的资源日历，说明项目需要什么资源、需要多少资源、什么时候需要；而不会说明项目实际可用的资源种类和数量以及何时可用。
+  参见：PMBOK○R指南第229页。
+  考点与答题技巧：资源日历。注意区分人力资源计划中的资源日历与作为组建项目团队过程的输出的资源日历。
+32.A.必须有横轴，用于表示时间。   
+B.必须有柱子，其高度代表所需的资源数量。
+  C.应该画一条横线，表示可用的最大资源数量，以便发现资源过度分配。
+  D.正确答案。
+  参见：PMBOKR指南第224页。
+  考点与答题技巧：资源直方图。
+33.A.建设项目团队过程，属于执行过程组。
+  B.管理项目团队过程，属于执行过程组。
+C.组建项目团队过程，属于执行过程组。
+  D.正确答案。
+  参见：PMBOKR指南第43页。
+  考点与答题技巧：项目人力资源管理知识领域中的过程。
+  注意：管理项目团队过程，在PMBOKR指南第3版中属于监控过程组。
+34.A.奖励的目的是鼓励所有团队成员。这种做法起不到这个作用。
+  B.正确答案。人人都能做到的行为，不一定人人都会做到。这种做法，能激励每一个团队成员，因为他们都有可能获奖。
+C.解释见B。
+  D.管理层所导致的问题，不应该由团队成员去解决。
+  参见：PMBOK○R指南第234页。
+  考点与答题技巧：认可与奖励：赢赢奖励。
+35.A.正确答案。虚拟团队特别需要沟通规划，如要求每一个人在收到其他人的电子邮件后，必须在24小时内回复。
+  B.文化差异对虚拟团队的影响不很重要，因为成员不面对面办公。
+  C.尽管应该鼓励面对问题，但这个选项不如A那么重要。
+  D.沟通规划中可以为虚拟团队指定联络员，所以此选项已包括在A中。
+  参见：PMBOKR指南第228页，解读第178页。    。
+  考点与答题技巧：虚拟团队特另4需要沟通规划。
+36.A.五阶段是形成、震荡、规范、成熟、终止。    B.同上。
+  C.正确答案。    D.同A。
+  参见：PMBOKR指南第233页。
+  考点与答题技巧：团队建设的五阶段模型。
+37 A.正确答案。项目绩效评估是管理项目团队过程的工具与技术。
+  B.团队绩效评价是建设项目团队过程的输出。
+  C.管理项目团队过程会导致组织过程资产更新，其中包括项目经理给组织绩效评价提供的输入。
+  D.与题意的相关性不强。
+  参见：PMBOKR指南第238页。
+  考点与答题技巧：管理项目团队过程的工具与技术：项目绩效评估。
+38.A双因素理论把与激励有关的因素分成：保健因素和激励因素。    B.同A。
+  C.正确答案。解释同A。    D.同A。
+  参见：解读第177页。
+  考点与答题技巧：常用的激励理论：双因素理论。
+ 39.A.职责分配矩阵可用于分配计划编制工作，但不局限于此。
+  B.正确答案。
+  C这个选项不够全面，且未反映职责分配矩阵的本质。
+  D.职责分配矩阵可帮助团队建设，但这个选项不能反映其本质。
+  参见：PMBOKR指南第221页。
+  考点与答题技巧：职责分配矩阵的用途。
+ 40.A.职责分配矩阵是人力资源计划的内容，但不是人员配备管理计划的内容。
+  B.正确答案。
+  C.组织结构图是人力资源计划的内容，但不是人员配备管理计划的内容。
+  D.角色与职责是人力资源计划的内容，但不是人员配备管理计划的内容。
+  参见：PMBOKR指南第224页。
+  考点与答题技巧：人力资源计划与人员配备管理计划。人力资源计划包括三个主要组成部分：角色与职责、组织结构图、人员配备管理计划。
+
