--- a/manage/pmp/9-人力资源.md
+++ b/manage/pmp/9-人力资源.md
@@ -1,18 +1,23 @@
 
 
-* PMP考试技巧和真题汇总详解 - 豆丁网 
+# PMP考试技巧和真题汇总详解 - 豆丁网 
     http://www.docin.com/p-958653479-f15.html
     137
-* PMP模拟题2 - 综合课件 - 道客巴巴 
+# PMP模拟题2 - 综合课件 - 道客巴巴 
     http://www.doc88.com/p-0601518040183.html
     9
-* (模二)PMP全真模拟题v.(精品) - 综合课件 - 道客巴巴 
+# (模二)PMP全真模拟题v.(精品) - 综合课件 - 道客巴巴 
     http://www.doc88.com/p-2991202792484.html
     52
 # PMP试题第九章 项目人力资源管理-历年试题资料-中培课堂 http://www.zpedu.com/SubjectInfo1465.html
-    31
+    31,50
+# PMP题库(300) - 经营企划 - 道客巴巴 http://www.doc88.com/p-7418879972440.html
+    82
+# PMP考试技巧和真题汇总详解 - 豆丁网 http://www.docin.com/p-958653479-f13.html
+    p126    
 
 # PMP考试      资源直方图与资源日历的区分   PMP培训_南京石泉_新浪博客 http://blog.sina.com.cn/s/blog_65d12fad0102v2td.html
+
 
 有题目如下：
                               项目进行中，有2名关键资源突然辞职，项目经理应该首先更新下列哪份文件？
