--- a/manage/pmp/9-人力资源.md
+++ b/manage/pmp/9-人力资源.md
@@ -15,6 +15,447 @@
     82
 # PMP考试技巧和真题汇总详解 - 豆丁网 http://www.docin.com/p-958653479-f13.html
     p126    
+# PMP考试非常重点的109道题目及解析 - 计算机等级 - 道客巴巴 http://www.doc88.com/p-8048613846957.html
+
+# PMP2008版备考练习题（2）_dzz_pmp_新浪博客 http://blog.sina.com.cn/s/blog_a63d5bf6010159mw.html
+
+# PMP模拟试题与解析（八） - 温故而知新，可以为师矣 - CSDN博客 http://blog.csdn.net/alen_liu_sz/article/details/73351244
+
+红色标识为答案，仅供参考，欢迎一起探讨。
+
+
+
+项目经理接到一个变更请求。该变更请求会影响到项目进度。对于谁应该对变更请求的执行做出决定存在不确定性。下列哪一份文件需要更新？
+A. 质量计划和风险登记册
+B. 沟通计划和风险登记册
+C. 项目计划和变更管理计划
+D. 变更管理计划和风险登记册
+
+
+针对某个问题与同事展开频繁而激烈的讨论容易树立敌对情绪。为了改善这种状况，你同意了同事的观点，你使用了哪种解决冲突的方法？
+A、 解决问题
+B、 撤退
+C、 强迫
+D、 面对
+解析：B。同意了同事的观点，就是从实际的冲突中退出（因为你针对某个问题与同事展开的讨论），你是自愿退出。这是撤退。你退出不愿再树立敌对情绪了，这符合撤退的内涵。
+
+
+项目经理召开一次会议，沟通尽早终止此项目。在项目会议上，项目经理表示从一开始就知道项目不会成功。这种情况反映了项目经理缺乏：
+A. 知识
+B. 项目信息
+C. 赞助支持
+D. 职业行为
+解析：D。此题的D项如果拟定为“职业道德”会更加准确。缺乏职业行为，意思就是说缺乏职业道德行为。项目经理是对项目成败负责的个人。项目经理是项目唯一的责任点。他从一开始就知道项目不会成功，而是等到会议上通过沟通尽早终止此项目，这种行为是一种不负责任和不诚实的行为。也就是缺乏职业道德约束的行为。
+
+
+项目团队将不能如期完成一个客户可交付成果。项目经理首先应该怎么做？
+A、 与团队一起审查满足期限的选择方案
+B、 将进度变更通知干系人
+C、 启动奖励体系，以便不会错过期限
+D、 搜索风险管理计划，确定应对这项风险的正确措施
+
+
+在一个软件开发项目的执行阶段，两名团队成员对谁应该做测试有不同意见，项目经理应该参照人力资源管理计划的下列哪一部分？
+A、 角色与职责
+B、 项目组织图
+C、 人员配备管理计划
+D、 项目人员配备
+
+
+项目经理接管了具有如下指数的项目：进度绩效指数为0.7，成本绩效指数为1.4，项目团队抱怨说他们不知道项目目标和他们需要执行的活动。根据这种情况，项目经理首先应该怎么做？
+A、 快速跟进关键路径上的活动
+B、 安排一次与发起人的会议
+C、 审查需求文件
+D、将问题上报给上级管理层 
+解析：C。题干包含了两个部分的内容，一个是进度落后，另一个是团队成员不明白项目目标和他们需要执行的活动。一个连目标和所从事的活动都没有弄明白的团队，就算是临时让他们从事赶工或者快速跟进，恐怕也会导致越帮越忙的局面。所以应该先弄清楚自己所从事的工作目标和对象是什么，然后才针对活动采取具体的应对措施，所以本题选择C。
+
+
+当项目进入执行阶段时，项目经理了解到团队成员在没有变更范围的情况下，加班进行预期之外的工作。出现这种情况的最大可能原因是什么？
+A、 工作分解结构不充分
+B、 沟通管理计划不明确
+C、 活动持续时间估算不准确
+D、 资源计划差
+
+
+项目预算被证明是不准确的，SPI是1.1。团队成员背离了活动属性，发起人将自己安置在变更控制委员会里，项目经理应该做什么？
+A、 说服发起人离开变更控制委员会
+B、 重新计算项目进度
+C、 重新估算活动属性
+D、 计算成本绩效指数
+解析：D。此题的关键字为“项目预算被证明是不准确的”，讲的是预算，与成本有关的事，属于规划过程组。项目预算决定了被批准用于项目的资金。将根据批准的预算来考核项目成本绩效。题目考察的是项目经理对4 种情况的处理：
+A 不正确，因为CCB 中可以包含发起人
+B 不正确，SPI 为1.1 说明进度正常
+C 不正确，活动属性被偏离应调查原因而不是进行重新估算D 正确。
+
+
+项目进展不顺利，发生了很多变更。为了更有效的控制项目，你首先应该做什么？
+A、 和干系人一起审核项目范围
+B、 制定新的变更形式
+C、 提醒每个人变更的程序
+D、 请求发起人审核项目章程
+
+
+从前一个项目中学到的经验教训对当前的范围说明书会产生什么影响？
+A. 由于工作分解结构是完整的，对范围说明书不会产生影响。
+B. 如果不忽视经验教训，范围说明书的制定会更快。
+C. 在当前的范围说明书中，将不大可能会重复过去的错误或疏忽失误。
+D. 范围说明书将不会收到经验教训库的影响，因为所有项目都是独特的。
+
+
+项目经理通知客户，一个关键路线上的一项关键路径任务被遗漏了。客户在回应时要求项目经理提供新的项目交付日期。这属于下列哪一项风险应对的范畴？
+A. 接受
+B. 转移
+C. 规避
+D. 缓解
+解析：C。客户的要求必须尊重，项目以客户利益为优先原则。题干中说“提供新的项目交付日期”，说明项目经理采纳了该客户的意见，而更改了新的交付日期，本题选择C。这符合规避策略的特点，参见PMBOK·P344.题干中的“关键路径上的一项关键路径任务被遗漏了”这是事实，关键路径任务被遗漏说明范围受影响，这将直接影响到项目进度计划的实施，特别是在可能更改项目范围时将要更改进度基准，所以客户在项目经理提供的事实基础上提出要求是天经地义的，其它选项都不适合。项目经理在尊重事实基础上而经过实施整体变更控制系统后修改进度计划属于规避。
+
+
+项目结束时，项目经理需要开展一次团队绩效审核。项目经理希望首先评估特定团队成员的绩效。若要正确开展审核，项目经理应该怎么对待这些成员个人？
+A. 将他们的绩效与其它团队成员对比
+B. 同时与整组人员召开绩效审核会议
+C. 关注对于特定行为范例的批评意见
+D. 开展审计，处理团队和个人的行为
+
+
+在与项目团队成员的非正式谈话中，项目经理发现某个关键部分的供应商在执行一个已获得批准的产品变更时有问题。项目经理接下来应该执行下列哪一项？
+A. 实施对供应商的质量审计
+B. 安排一次变更控制会议
+C. 衡量供应商的工作绩效
+D. 与供应商的高级经理谈话
+
+
+一位职能经理与项目经理的上司讨论了一个针对验收标准的变更。会议过后，项目经理的上司通知项目经理进行变更。在这种情况下，项目经理最好应该：
+A、 尽快变更
+B、 理解该变更
+C、 交给上司一份变更请求
+D、 评估该变更的影响
+答案：“B. 理解该项变更。”
+首先你需要理解该项变更，然后你才能与团队一起确定它的影响和选择方案。
+
+
+项目团队审查了他们的每月项目质量测量指标。干系人要求新产品的投产废品率必须小于1%。若要满足这个要求，项目经理应该使用下列哪个方法或过程？
+A. 统计抽样
+B. 过程分析
+C. 计划-实施-检查-行动
+D. 标杆对照
+B。题干说“要求新产品的投产废品率必须小于1%”，在已经审查了质量测量指标的前提下，项目经理及其团队要想满足这一要求，必须持续改进项目的质量，以便消除非增值活动，减少浪费。而C是在所有项目中都可以采用的一种方法，相对没有针对性；AD与题干要求不符。 
+
+
+项目经理应该提供什么文件给新的项目团队以便他们学习有关所有项目里程碑的知识？
+A、 工作分解结构词典
+B、 项目章程
+C、 项目范围说明书
+D、 工作分解结构
+解析：A。本题涉及项目里程碑知识的有项目章程和工作分解结构词典，参阅PMBOK·P77和PMBOK·P122。而题干中说的是所有项目里程碑的知识。项目章程中的里程碑知识相对概括、综合，而WBS词典中的里程碑知识点就比较详细了，几乎都是WBS的详细的文字描述，题干中有“新的项目团队成员”，而项目章程是高度浓缩、相对综合和概括性的东西，不可能有WBS那么详细，对新的成员给详细的东西会有更用。所以本题选择A。
+
+
+某项目正在使用的经验教训文件表明在整个项目过程中历史资料的利用较差。若要找到这个问题的原因，项目经理应该使用下列哪一项工具？
+A、控制图
+B、帕累托图
+C、趋势图
+D、鱼骨图 
+解析：D。据题干，找到问题发生的原因，才能直观显示各种因素如何与潜在问题或结果的联系。鱼骨图就是通过不断的发现某个可能的根本原因来达成完成项目的某个目标。项目整个过程利用历史资料较差，到底是哪一个环节出了问题呢？通过鱼骨图不断寻找根本原因直至找到利用率低下的原因。
+
+
+控制图会向项目经理提供什么信息？
+A、指出偏差分析的需求
+B、说明流程是如何随着时间表现的
+C、帮助项目经理改变项目范围
+D、识别项目风险
+解析：B。参阅PMBOK•P238可知，控制图能够直观地反映某个过程随时间推移的运行情况，以及何时发生了特殊原因引起的变化，导致该过程失控。此题问题在于B项的翻译不尽准确，应该把英文中的“process”译为“过程”较为精确。偏差分析是需要持续做的，要看趋势和原因的，所以A不对。C项不可能，这属于范围蔓延；尽管项目经理也需要在整个项目生命周期内识别风险，但此时识别风险不是项目经理及其团队最需要处理的事情，据此可以排除D。
+
+
+项目范围一时很难确定下来，且项目团队之前执行过此类工作。进度绩效指数为0.7，在调查完差异后，项目经理发现在现场工作的其中一名团队成员被项目发起人要求去执行其认为对项目很重要的部分。若要避免出现这种问题，项目经理应采取下列哪一项行动？
+A、改进项目沟通，确保所有需求都得到满足
+B、根据新的需求对项目范围进行变更
+C、给同事提供明确的说明，停止范围蔓延
+D、开展变更必须通过变更控制委员会进行的沟通
+解析：D。此题争议在于BD两项。题干内容显示，范围不确定，进度落后，人员流动。显然，要想避免此类问题出现，一定要有一个顺畅的沟通渠道。因为人员流动，涉及变更，尤其是范围的变更，所以综合起来看D为最优选项。D，保证所有针对范围的变更都通过CCB而不是发起人的要求。
+
+
+项目经理接管一个处于执行阶段的项目，客户无法按照要求的详细程度来定义项目目标,此时项目团队成员已经开始抱怨，因为需求的不断变化导致无法进行工作估算和进度编制。项目经理应该怎么做？
+A、 将团队成员的抱怨告诉客户，并要求更多的详细需求
+B、 告诉项目团队成员客户无法按照要求的节奏提供需求
+C、 当有更详细信息时，更新高层次WBS
+D、让项目团队关注当前任务
+ 解析：A。面对处于执行阶段的项目，以及客户无法按照要求提供给详细需求而准确定义项目目标时，项目经理及其团队需要继续收集来自客户的需求，当团队成员开始抱怨时，项目经理执行实事求是的原则，将真实情况告知团队成员，以期获得团队成员的理解，继续从客户那里收集需求，因为需求是工作分解结构的基础。需求没有定义清楚，项目将无法有效完成，固然项目目标也就无法达成。因为需求如果没有收集清楚，则会对其后的项目范围说明书的制定以及WBS的创建都会产生连带影响。
+
+
+项目经理向客户提交可交付成果以供批准。客户称可交付成果没有达到验收标准，并要求项目经理对可交付成果进行返工。客户还希望查看返工进度的相关信息。项目经理接下来应该执行哪一项活动？
+A、 配置识别
+B、 配置状态记录
+C、 配置控制
+D、 配置核实与审计
+
+
+项目经理要求团队成员使用这四种主要类别：计划、分析、设计和测试 创建工作分解结构。这些类别应如何嵌入工作分解结构中？
+A、 活动层次
+B、 工作包层次
+C、 第二分解层次
+D、 第一分解层次
+ 
+关键路径上的某些任务发生延迟时，项目经理立即决定对进度变量的不同组合加以分析，以使项目符合原交付日期。项目经理应该用哪种进度控制工具？
+A、 假设情景分析
+B、 进度压缩
+C、 资源平衡
+D、 赶进度
+
+
+项目发起人启动了一个新项目。该项目将涉及他们的客户、多个分包商以及一个虚拟项目组织。项目发起人制定项目章程，来调整下列哪一项两者之间的期望？
+A. 项目发起人和赞助公司
+B. 客户和项目
+C. 分包商和项目
+D. 项目经理和赞助公司
+解析：D。此题涉及客户的内涵。在批准项目章程之前，项目经理掌管着项目资源。当批准项目章程之后，发起人将项目的权利转移给项目经理，所以在批准项目章程前，即制定项目章程时，需要具体协调项目经理和发起人之间的期望。因为有些发起人具体授权项目经理实施的可能不止一个项目，所以每一个具体的项目的项目经理在制定项目章程时，需要协调D之间的期望。
+
+
+以下哪一项属于执行整体变更控制中配置管理活动的一部分？
+A、将项目管理计划与项目的实际绩效对比
+B、更新范围管理计划
+C、识别和记录产品的功能特征和物理特征
+D、验证可交付成果的完整性
+解析：C。可能相当多的考生会盯着教材96页的配置管理的内容：①配置识别；②配置状态记录；③配置核实与审计。从这三点以及各自具体内容和四个选项来看，觉得没有答案可选。其实配置管理还可以在教材585页找到相关内容。可知本题选择C。
+
+
+项目经理接管客户一个发展良好的项目。该项目是一个由外部资助的项目，实行严格的付款计划和期限。在项目实施阶段，项目经理确定该项目工期落后了，此时项目经理应该怎么做？
+A、 把进度压缩到完工的最后期限。
+B、 提交变更请求，请客户批准。
+C、 不采取任何行动，因为合同不能明确产品延迟交付的日期。
+D、 为准时交付产品而实施质量审计。
+解析：A。项目经理遇到问题，态度首先应该是直面问题，然后才是解决问题。题干中说“出现了进度问题”，项目经理首先要想办法进行进度压缩，以满足进度要求。选项B的主要问题是：请客户批准。涉及到客户批准的，那一定是要修改进度基准了，延长完工日期了。现在项目经理还有机会采用进度压缩的方式把进度赶回来。所以选A。
+
+
+项目以外的个人正在破坏主要可交付成果。若要预防这个问题，项目经理可更好地制定以下哪份文件？
+A. 范围说明书
+B. 工作分解结构
+C. 干系人管理计划
+D. 项目管理计划
+
+
+若要管理项目的范围蔓延，项目经理应该：
+A. 与项目发起人一起审查变更请求
+B. 设立变更控制委员会
+C. 实施风险管理计划
+D. 执行项目绩效审查
+
+
+项目经理审查了职责分配矩阵，确定在项目执行阶段某个特定资源会出现冲突。为了优化资源可用性，项目经理希望保持资源的平衡利用。项目经理应该使用下列哪种方法？
+A. 资源平衡
+B. PERT
+C. 关键路径
+D. 赶工
+
+
+项目经理主持一个建立数据中心的项目。客户向项目经理提交了一份重大变更，坚称这项修改必须尽快包含在内。这涉及到对预算和总体进度延长的递增变化。项目经理接下来应该怎么做？
+A、 建议客户将变更作为另一个项目启动
+B、 在下一次变更控制委员会会议上提交客户的请求
+C、 包含客户的变更并重订预算和进度基准
+D、 忽视该需求，因为有关项目的预算和进度基准已达成一致
+
+
+在项目执行阶段，项目发生了很多变更，项目经理应该：
+A、 一直等待，直到了解了所有的变更，然后打印一份新的进度表。
+B、 根据需要尽快实施被批准的变更，但是保留原有的进度基准。
+C、 只实施管理层批准确的变更。
+D、 实施任何变更前要通知管理层。
+
+
+A公司要求B公司比计划日期提前完成工作。若要在增加最少项目成本的情况下完成工作，B公司的项目经理应该采用什么方法？
+A、 加班
+B、 增加更多资源
+C、 快速跟进项目
+D、 赶时间线
+考点：通过增加资源，以最小的成本增加来压缩进度工期的一种技术。
+
+
+项目接近完工，团队成员向项目经理报告一个会影响到重要期限的问题。每周状态报告将如期发送至主要干系人。项目经理下一步该怎么做？
+A、 更新问题日志，通知发起人并使用问题升级流程，向干系人报告可能延迟
+B、 在下一次状态周报中通知干系人，与他们讨论可能的解决方案，并请求预算和进度延期
+C、 核实该问题是否包含在风险计划中；如不在，则应将其包含入内，并编制风险减轻计划
+D、 更新问题日志，将可帮助解决问题的所有人员包含在内，并与干系人就此问题进行沟通
+
+
+干系人询问项目是否正确包含最新的变更请求。若要向干系人展示这一点，项目经理应该使用以下哪一项工具？
+A、过程分析
+C、帕累托图
+C、石川图
+D、质量审核
+
+
+某项目在一个大型操作环境中使用生产性基础设施，此时项目发生了一次事故。但是实施了一个技术解决方案来解决问题。在这种情况下，一名项目干系人仍然投诉，这是因为：
+A. 项目发起人未得到通知，且未批准所选择的方案
+B. 风险未识别、评估，且在风险日志中更新
+C. 变更管理委员会未得到通知，且事故未进行评估
+D. 变更造成了一个可能已经导致重大操作影响的风险
+ 解析：B。发生了事故，干系人投诉，排除A（没发起人什么事），D（未提及），C（没提到这个技术解决方案和CCB有什么关系，也没说干系人和CCB有什么关系），B选项更可能是因为这个事故之前没有识别出，评估好，没记录导致了干系人的不满。
+
+
+随着竞争的陡然加剧，一家知名公司的业务开始流失。公司聘请了一名项目经理分析情况并提供纠正措施建议。项目经理研究发现，项目实施过程尤其是风险管理方面存在着较大差距。没有可用的风险管理计划。项目经理首先应采取下列哪项行动？
+A. 头脑风暴并识别风险
+B. 增加风险预算
+C. 实施定性风险评估
+D. 制定风险管理活动实施计划
+
+
+项目处于执行阶段。若要减少项目中的威胁,项目经理应该怎么做？
+A. 更新风险管理计划
+B. 实施行动减轻项目风险
+C. 执行蒙特卡洛分析，并确定影响
+D. 将风险因素报告给项目责任人，并征求决策
+
+
+在用户对项目可交付成果开展验收测试时，客户发现其中一个关键功能没有定义。项目经理应该与客户审查哪一项？
+A、 职责分配矩阵
+B、 需求追溯矩阵
+C、 质量管理计划
+D、 项目范围说明书
+
+
+项目经理发现对产品进行了多项细微变更。虽然这些变更很细微，但没有在变更控制日志中被记录，也未获得客户的批准。若要确保类似的变更在项目中能得到正确的管理，项目经理应该：
+A、 确定与变更有关的成本，并向客户提供额外工作的账单
+B、 告知客户进度已经发生变化，并要求更多资源
+C、 在变更控制日志中记录变更，并审查潜在影响
+D、 与员工和客户审查变更控制流程
+
+
+在状态会议上，项目经理注意到项目超出预算。项目经理觉得应该早点发现这个问题。那么请问，什么才能有助于提前发现这种情况？
+A、 项目开始之前，编制一份定义明确的项目章程
+B、 使用德尔菲技术，专门识别与成本有关的风险
+C、 在监控流程中使用成本管理计划
+D、 定期计算进度偏差
+
+
+团队成员A希望离开团队，不断抱怨团队成员B的个性。项目经理应该怎么做？
+A. 与两名团队成员分别谈话，了解他们当前关系的真实情况。
+B. 告知团队成员A会把团队成员B从项目中开除。
+C. 解决团队成员之间的冲突，并促进解决方案。
+D. 让团队成员尝试合作到项目结束为止。
+解析：A。B项是过分武断的行为，PMI不提倡这样做；C项是没有任何了解的基础上就实施解决冲突，有些唐突和草率；D项与题干不符，因为题干中已经明确两人有冲突了，在不做任何沟通疏导的基础上硬性逼迫两人合作，这不是解决问题，而是强迫；A项比较合理，项目经理分别找两人谈话，了解冲突是什么以及冲突产生的原因，尝试先让他们两人自行解决，如果两人自行解决不了，项目经理再出面调停解决。
+
+
+指导委员会在没有与项目经理磋商的情况下，对项目范围进行了细微变更。项目经理首先应该怎么做？
+A、 磋商并在项目下一个阶段执行变更
+B、 修改项目计划以包含这个细微变更
+C、 确定项目范围变更的影响
+D、 将其视为风险，并执行风险响应策略
+
+
+项目群经理在实施项目审计时，发现问题日志中各项均为项目经理所有。这可以接受吗？
+A、不可接受；项目经理不得作为问题及其解决方案的所有者
+B、可接受；根据要求，所有问题均有指定的所有者
+C、可接受；项目经理必须是所有问题及其解决方案的所有者
+D、不可接受；项目团队必须是所有问题及其解决方案负责人
+
+
+项目团队必须远程执行项目。项目需求经常发生变化。项目经理接下来应该怎么做？
+A、 评估风险优先级
+B、 评估风险影响
+C、 记录风险
+D、 进行专家判断
+解析：D。利用专家评估这样的项目，在需求经常变化着的项目会不会出现风险。对于需求经常变化的远程项目，需要借助专家判断，依照他们以往的经验和专业知识指出可能存在的风险，然后采取合理的应对措施。注意，需求经常变化的远程项目，并非就一定有风险，那么到底有没有风险，借助专家的经验和他们在某个业务领域的特长来定夺。而B项是确定确实存在风险后要做的事情；C项是肯定远程项目一定有风险；A项更是铁定远程项目有风险才采取的措施。
+
+
+客户要求一个新产品尽快推向市场。客户要求项目经理进一步压缩进度，项目经理接下来做什么？
+A、 告知客户进度无法改变
+B、 要求客户提交变更请求
+C、 审查关键路径，并通知团队新的进度
+D、 协商变更范围，并压缩进度
+
+
+在风险评审会议上，项目团队确定了将会减少项目风险的预防措施。项目经理应该查阅下列哪份文件来实施这些措施？
+A、变更管理计划
+B、风险应对策略
+C、风险管理计划
+D、质量管理计划
+解析：B。题干的题眼是“确定了将会减少项目风险的预防措施”，应对威胁降低不确定性的应对策略有四种，即回避、转移、减轻和接受。所以答案是B。此题有迷惑性的选项是C。注意，风险管理计划是用来指导项目风险的定义、记录、核实、管理和控制等，描述将如何安排与实施项目风险管理、分析、应对以及监控的一个计划，只是起一个指导性作用。
+
+
+在某历时几年的项目的实施阶段，项目经理发现已指派资源之一将因日程冲突而不可得。项目经理在查阅人力资源管理计划后，发现了一个可满足项目要求的替代资源。项目经理执行的是哪一过程？
+A. 组建项目团队
+B. 建设项目团队
+C. 管理项目团队
+D. 制定人力资源计划
+
+
+项目经理正在启动一个新项目.识别所有干系人的主要原因是什么？
+A. 识别成本并计划预算
+B. 了解预期期望，并将正面影响最大化
+C. 计划沟通和收集需求
+D. 计划质量和识别风险
+解析：在项目的早期就识别干系人，并分析他们的利益、期望、重要性和影响力，对项目成功非常重要。随后可以指定一个策略，用来接触每个干系人并确定其参与项目的程度和时机，以便尽可能提高他们的正面影响，降低潜在的负面影响，因此选B。
+
+# 项目管理概论·判断_李大烟袋_新浪博客 http://blog.sina.com.cn/s/blog_4908e12e010008rk.html
+
+1.项目不是独特的，因为总是有某些方面是以前做过的。（错）
+2.为了有效地管理一个项目，应该把工作分解成若干小块，直到可以由一个人来完成为止。（错）
+3.自由时差是指一项任务延迟而又不影响项目竣工日期的时间（错）
+4.未来现金流量的当前值称之为现值（对）
+5.项目质量保证以检查项目特定可交付成果的质量为特性（错）
+6.麦格雷戈的X理论认为，人们总是逃避工作，需要自始自终的监视（对）
+7.项目沟通管理计划通常包括项目主要里程碑和目标日期（错）
+8.项目风险包括对项目目标的威胁，也包括促进项目目标的机会（对）
+9.避免一定程度成本风险的一种方法是选择与你的卖方签订固定价格合同。（错）
+10.在完成项目的过程中，管理层提出一项变更，项目经理需要做的第一件事就是告诉客户将要发生的变更（错）
+11.尽管项目范围经过了定义和批准,但正常运行的项目通常是要经过渐进明细的过程,并非保持不变(对)
+12.项目可交付结果是在完全定义了工作之后确定的(错)
+13.如果挣值分析表明项目提前于进度计划,并且低于预算,则赶工时唯一可行的选项(错)
+14.成本管理计划是成本管理过程领域中成本预算的输出(错)
+15.项目经理正与团队使用因果图,确定各种因素如何与潜在问题相关联,此时,项目经理正处于质量控制阶段(错)
+16.马斯洛认为,人们工作绝大部分都是为了金钱或安全.(错)
+17.一般而言,下行沟通和平行沟通通常十分容易,但上行沟通渠道往往不是十分顺畅(对)
+18.风险成本是风险可故造成的损失或减少的收益(错)
+19.为了保证项目质量,应该尽量采购价高质伏的货物(错)
+20.战略是企业项目选择的基础,而具体策略是企业组合项目资源分配的基础(错)
+21.典型的产品生命周期包括一个以上的项目生命周期(对)
+22.WBS对负责每项定义项目活动的职能经理加以说明(错)
+23.赶工总会缩短项目历时,但是经常会增加风险(错)
+24.类比估算的好处是估算将更接近工作实际要求的估算(错)
+25.过程调整是项目质量规划的一项输出(错)
+26.与职工谈心,召开座谈会.听取情况汇报属于双向沟通(对)
+27.作为一个项目经理,你建议你的两个工程师通过妥协来解决一项技术分歧,这是一个双赢的局面(错)
+28.风险成本将全部由项目主体来承担(错)
+29.采购计划编制时应该尽量少采用专家判断,因为这种方法受意见主体的主观影响太大.(错)
+30.利用市场信号对竞争对手进行分析,一定要注意市场信号的真伪(对)
+31.项目管理生命期对于每个项目都是独特的(错)
+32.WBS对每个定义活动的商业需求加以说明(错)
+33.为了确保能够按进度计划完成任务,团队需要审定最终进度计划(对)
+34.成本估算与成本预算都以工作分解结构为依据,所运用的工具与方法相同(对)
+35.赫兹伯格认为良好的工作条件和工作关系将提高动力(错)
+36.在一次团队会议上,团队对整合方法争论20多分钟也没有什么结果,项目经理人计划下次团队会议再解决这个问题.这是一种回避的解决冲突的办法.(对)
+37.由于项目干系人的需求是极端重要的,因此,花费在项目干系人分析上的时间越多越好.(错)
+38.风险识别是指项目管理要确定措施或建立控制方法,减少或避免风险对项目过程或组成部分的影响.(错)
+39.供应商是一个与购买者相对立的利益主体,而且是一个追求利益最大化为目的的利益主体(对)
+40.在波士顿矩阵分析中拥有高增长率,低市场份额的业务称之为现金牛业务,它能产生较高的现金流(错)
+41.项目生命周期通常随着项目变化和发展(错)
+42.在合同执行之前向项目指派项目经理是合适的(错)
+43.你对关键路径进行评估后,确定项目可以比管理层预期的日期提前两周完成,这时你应该将资源调离关键路径,执行非关键路径上的任务(错)
+44.挣值法的独特之处在于以预算和费用来衡量工程的进度,是一项进行费用进度综合控制的技术.(对)
+45.在整个项目期间,应该定期进行质量规划工作(对)
+46.马斯洛需求层次理论的最高层需求是尊重的需要(错)
+47.除了语言之外的任何身体上的沟通符号,如姿态.声调.语调或面部表情等也能作为沟通的一种方式(对)
+48.情景分析法注重说明某些事件出现风险的条件和因素,并且还要说明当某些因素发生变化时,又会出现什么样的风险,产生什么样的后果等(对)
+49.供应商调查的目的之一就是要了解项目有哪些可能的供应商,各个供应商的基本情况如何,为项目了解资源市场以及选择正式供应商做准备(对)
+50.波士顿矩阵认为解决“狗”业务最好的办法是加大现金的投入来扩大市场份额.(错)
+51.对于管理涉及专业交叉作业的复杂项目,项目型组织类型是最好的(错)
+52.当项目大部分已经完成,而客户要求对工作范围做重大变更时,项目经理应该向客户解释,进展到这个程度不能再做此项目变更(错)
+53.在双代号网络图中的虚箭线是实际工作中并不存在的一项虚拟工作,故它科既不占用时间,也不消耗资源(对)
+54.PARETO图的主要用途体现在帮助预测项目可能遇到的未来的问题(错)
+55.当客户表示接受产品或服务时,表示项目质量即己满足了.(错)
+56.当项目团队处于表现阶段冒,主要采用的激励方法是参与激励.责任激励和信息激励(错)
+57.尽管你很关注良好的沟通,你也不可能对于你的母语不同的某人接受信息的好坏程度负责(错)
+58.在项目进行过程之中,社会也在承担项目所带来的风险和回报,因此,在考虑风险的社会费用时,也应也风险带来的社会效益一同考虑.(对)
+59.招标采购是在众多的供应商中选择最佳供应商的有效方法(对)
+60.如果市场份额可以迅速,足够的扩大,那么问题小孩将变成现金牛,最终变成明星.(错)
+61.一个有经验的项目经理会避免含有不确定性的项目(错)
+62.范围核实的主要内容是通过确保客户对可交付成果的接受保证项目不偏离轨道(对)
+63.项目进度计划控制是一种循环的例行性活动(对)
+64.时间管理的目的就是将时间投入与目标相关的工作达到效果.效率,交通.(对)
+65.在项目的几个参与者中,项目经理在质量职能中发挥最重要的作用(错)
+66.物质激励的作用是有限的,尤其对于己经具有很高收入的项目经理人员和项目员工来说更是如此(对)
+67.在项目经理进行谈判时,非语言形式的沟通技能只起到很小的作用(错)
+68.敏感性分析的目的之一在于比较多方案的敏感性大小,以便在经济效益值相似的情况下,从中选出不敏感的投资方案.(对)
+69.诉讼是解决项目合同纠纷的快速有效的方法(错)
+70.如果项目的净现值等于零,则表示该项目不能盈利,是不可取的(错)
 
 # PMP考试      资源直方图与资源日历的区分   PMP培训_南京石泉_新浪博客 http://blog.sina.com.cn/s/blog_65d12fad0102v2td.html
 
